# claudi-time

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  KONTROLLE-MATCHING-SYSTEM.md  MATCHING-V5.md  PDF-PROFIL-BUTTON.md  README.md  RECRUITER.md  TELEGRAM-BOT-DOKUMENTATION.md  alembic.ini  claude_match_helper.py  docker-compose.test.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  railway.toml  start.sh
Akquise/: E2E-TEST.md  Fragen und Reparaturen.md  MEMORY.md  PLAN.md  RECHERCHE.md  REVIEW-TEAM.md  WEBEX-SETUP.md  playwright_e2e_tests.py
Pipeline-Seite/: MEMORY.md  PLAN.md  preview.html
app/: __init__.py  auth.py  config.py  database.py  main.py  state.py
app/api/: __init__.py  exception_handlers.py  rate_limiter.py  routes_acquisition.py  routes_acquisition_pages.py  routes_admin.py  routes_alerts.py  routes_ats_call_notes.py  routes_ats_jobs.py  routes_ats_pages.py  routes_ats_pipeline.py  routes_ats_todos.py  routes_briefing.py  routes_candidate_presentation.py  routes_candidates.py  routes_claude_matching.py  routes_companies.py  routes_email.py  routes_email_automation.py  routes_filters.py  routes_hotlisten.py  routes_jobs.py  routes_match_center.py  routes_matches.py  routes_matching_v2.py  routes_n8n_webhooks.py  routes_new_match_center.py  routes_pages.py  routes_pipeline_v3.py  routes_pre_match.py  routes_presentation.py  routes_presentation_reply.py  routes_search.py  routes_settings.py  routes_smart_match.py  routes_statistics.py  routes_status.py  routes_telegram.py  routes_titel_zuweisung.py  routes_users.py
app/config/: role_compatibility.json  skill_hierarchy.json  skill_weights.json
app/data/: plz_ort.json
app/models/: __init__.py  acquisition_call.py  acquisition_email.py  alert.py  ats_activity.py  ats_call_note.py  ats_email_template.py  ats_job.py  ats_pipeline.py  ats_todo.py  candidate.py  candidate_document.py  candidate_email.py  candidate_note.py  candidate_task.py  client_presentation.py  company.py  company_contact.py  company_correspondence.py  company_document.py  company_note.py  email_blocklist.py  email_draft.py  import_job.py  job.py  job_run.py  match.py  (+10 more)
docs/: CREDENTIALS_SETUP_KUNDE_VORSTELLEN.md  PROJEKT_KONTEXT.md  TEST_BERICHT_PHASE9.md
migrations/: env.py
scripts/: backup_database.sh  import_crm_companies.py  import_csv.py  rollback.sh  run_tests.sh
tests/: __init__.py  conftest.py  test_api.py  test_crm_sync.py  test_crud.py  test_csv_import.py  test_geo.py  test_hotlisten.py  test_integration.py  test_matching.py  test_openai.py  test_unit.py  test_validation.py
(+276 files in other folders)
